# 10-days-of-grad

./: .gitignore  develop.nix  flake.nix  overlay.nix  ten-days-of-grad.cabal
day1/: Iris.hs  README.md
day2/: Main.hs  NeuralNetwork.hs  README.md
