cabal-version: 2.4
name:          ten-days-of-grad
version:       0.5



executable iris
  main-is: day1/Iris.hs
  other-modules:
      Paths_ten_days_of_grad
  ghc-options: -Wall
  build-depends:
      base
    , hmatrix
  default-language: Haskell2010


executable nn
  main-is: Main.hs
  other-modules:
      NeuralNetwork
      Paths_ten_days_of_grad
  hs-source-dirs:
      day2
  ghc-options: -Wall
               -O2
  build-depends:
      base
    , hmatrix
    , hmatrix-morpheus
  default-language: Haskell2010
